--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build && next export && firebase deploy",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^10.8.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
